[project]
name = "kowiz-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "adib-the-noob",email = "mdadib550@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2.3,<6.0.0)"
]

[tool.poetry]
packages = [{include = "kowiz_backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
